--- a/css/main.css
+++ b/css/main.css
@@ -30,3 +30,10 @@ html {
     font-size: x-small;
     font-style: italic;
 }
+
+pre {
+    background-color:ghostwhite;
+    color: gray;
+    font-family: 'Courier New', Courier, monospace;
+
+}
