--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,10 @@ html {
     cursor: pointer;
 }
 
+a{
+    cursor: pointer;
+    color:DodgerBlue;
+}
 .ref {
     position: absolute;
     bottom: 0;
